<resources>
    <string name="app_name">TP_IHC_Android</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="logo">Logo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="email_label">Email:</string>
    <string name="email_hint">Insira seu email</string>

    <string name="senha_label">Senha:</string>
    <string name="senha_hint">Insira sua senha</string>

    <string name="marcar">Marcar presença</string>
    <string name="presencas">4</string>
    <string name="presencas_semana">Presenças esta semana</string>

    <string name="login">Login</string>
    <string name="title_activity_menu_bar">MenuBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">-</string>
    <string name="nav_header_subtitle">-</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_justification">Justificativa</string>
    <string name="menu_set_presence">Marcar Presença</string>


    <string name="tabela_D">D</string>
    <string name="tabela_S">S</string>
    <string name="tabela_T">T</string>
    <string name="tabela_Q">Q</string>

    <string name="mes_fill">Dezembro/2020</string>

    <string name="presenca_marcada">Sua presença foi marcada com sucesso!</string>
    <string name="presenca_ja_marcada">Você já possui presença hoje!</string>
    <string name="presenca_mes_errado">Não é possível marcar a presença sem estar no mês atual.</string>
    <string name="presenca_final_de_semana">Não é possível marcar presença no final de semana.</string>
    <string name="fechar">Fechar</string>
    <string name="proximo_mes">Proximo Mes</string>
    <string name="anterior_mes">Mes Anterior</string>

    <string name="email_nao_preenchido">Por gentileza, entre com seu email.</string>
    <string name="senha_nao_preenchida">Por gentileza, entre com sua senha.</string>
    <string name="email_invalido">Entre com um email válido.</string>
    <string name="senha_invalido">Preencha o campo senha.</string>
    <string name="login_invalido">Não foi possível realizar o login. Verifique as informações.</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
