<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_justification"
            android:icon="@drawable/ic_menu_email"
            android:title="@string/menu_justification" />
        <item
            android:id="@+id/nav_set_presence"
            android:icon="@drawable/ic_menu_person_pin_circle"
            android:title="@string/menu_set_presence" />
    </group>
</menu>
