<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <!-- Presenças -->
    <View
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Numero de presenças -->

    <View
        android:id="@+id/presencas"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/btnMarcarPresenca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numero_presencas"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/presencas"
        android:textAppearance="@style/title1"
        app:layout_constraintEnd_toEndOf="@+id/presencas"
        app:layout_constraintStart_toStartOf="@+id/presencas"
        app:layout_constraintTop_toTopOf="@+id/presencas" />

    <!-- Presenças esta semana -->
    <TextView
        android:id="@+id/semana_presencas"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/presencas_semana"
        android:textAppearance="@style/title2"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="@+id/presencas"
        app:layout_constraintTop_toBottomOf="@+id/numero_presencas"
        />


    <Button
        android:id="@+id/btnMarcarPresenca"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:width="160dp"
        android:height="40dp"
        android:background="@drawable/ic_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/marcar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#EE5656"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

</androidx.constraintlayout.widget.ConstraintLayout>